<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent"
              android:id="@+id/fileListLayoutRoot"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".ui.xmlToJson.fileList.FilesListFragment">




        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:id="@+id/chooseFileButton"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/chooseFolderButton"
                    android:layout_marginStart="15dp"
                    android:text="@string/choose_file"/>
            <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:id="@+id/chooseFolderButton"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/chooseFileButton"
                    android:layout_marginStart="15dp"
                    android:text="@string/choose_folder"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/divider" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filesRecyclerView"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <include layout="@layout/divider" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="15dp"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:id="@+id/saveAllJsonButton"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/save_all_json"/>
        </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>