<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            tools:context=".ui.audioConverter.homeFragment.AudioConverterHomeFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:padding="15dp"
                    android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                        android:layout_width="0dp"
                        android:id="@+id/chooseFileButton"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/chooseFolderButton"
                        android:layout_marginStart="15dp"
                        android:text="@string/choose_file"/>
                <com.google.android.material.button.MaterialButton
                        android:layout_width="0dp"
                        android:id="@+id/chooseFolderButton"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/chooseFileButton"
                        android:layout_marginStart="15dp"
                        android:text="@string/choose_folder"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        <include layout="@layout/divider" />

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:id="@+id/content">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/filesRecyclerView"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:text="@string/loaded_files"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/filesRecyclerView"
                    android:layout_margin="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <include layout="@layout/divider" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/output_file_format"
                    android:labelFor="@id/format_options"
                    android:padding="7dp"
                    android:textStyle="bold"
                    />
            <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:justifyContent="center"
                    app:flexWrap="wrap"
                    app:flexDirection="row"

                    android:id="@+id/format_options">
                <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MP3"
                        android:id="@+id/checkbox_mp3"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="AAC"
                        android:id="@+id/checkbox_aac"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="M4A"
                        android:id="@+id/checkbox_m4a"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="WMA"
                        android:id="@+id/checkbox_wma"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="WAV"
                        android:id="@+id/checkbox_wav"/>
                <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="FLAC"
                        android:id="@+id/checkbox_flac"/>
            </com.google.android.flexbox.FlexboxLayout>
            <include layout="@layout/divider" />
            <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:id="@+id/convertButton"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/convert"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>